fix homepage formatting issues on mobile

--- a/_sass/common/_variables.scss
+++ b/_sass/common/_variables.scss
@@ -81,8 +81,8 @@ $z-indexes: (
 );
 
 $layout: (
-  header-height:          5rem,
-  header-height-lg:       6.5rem,
+  header-height:          100px,
+  header-height-lg:       360px,
   content-max-width:      950px,
   sidebar-width:          250px,
   sidebar-header-height:  3rem,
